[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abr_server"
version = "2023.9.0"
dependencies = [
    "pipenv==2023.9.1"
]
authors = [
  { name="UMN Interactive Visualization Lab", email="ivlab-admin@umn.edu" },
]
description = "Server for the Artifact-Based Rendering Engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://ivlab.cs.umn.edu"

[project.scripts]
abr-server = "abr_server:django_manage"

[tool.setuptools.packages.find]
include = ['abr_server', 'compose', 'api']